src-ken&y/objects/Customer_Invoice_Line__c.object
<CustomObject>
    <customHelpPage>HelpCustomerInvoice</customHelpPage>
    <fields>
        <fullName>Accounting_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Segment</label>
        <referenceTo>Accounting_Default__c</referenceTo>
        <relationshipLabel>Customer Invoice Lines</relationshipLabel>
        <relationshipName>Customer_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Line</label>
        <referenceTo>Agreement_Line__c</referenceTo>
        <relationshipLabel>Customer Invoice Lines</relationshipLabel>
        <relationshipName>Customer_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Customer Invoice Lines</relationshipLabel>
        <relationshipName>Customer_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allowance_Applied__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allowance Applied</label>
        <referenceTo>Allowance_Applied__c</referenceTo>
        <relationshipLabel>Customer Invoice Lines</relationshipLabel>
        <relationshipName>Customer_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allowances__c</fullName>
        <label>Allowances</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BillBack_Commitment__c</fullName>
        <label>BillBack Commitment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillBack_Rate__c</fullName>
        <description>For Trade Promotion Bill Back Commitment</description>
        <label>BillBack Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claim_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Line</label>
        <referenceTo>Claim_Line__c</referenceTo>
        <relationshipLabel>Customer Invoice Lines</relationshipLabel>
        <relationshipName>Customer_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Company.</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipName>Customer_Transaction_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>Customer_Invoice__r.Currency__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Invoice__c</fullName>
        <label>Customer Invoice</label>
        <referenceTo>Customer_Invoice__c</referenceTo>
        <relationshipLabel>Customer Invoice Lines</relationshipLabel>
        <relationshipName>Customer_Invoice_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <description>The number of currently unresolved exceptions on this record.</description>
        <label>Exceptions Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Price__c</fullName>
        <formula>Sales_Order_Line__r.Expected_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extended_Price__c</fullName>
        <label>Extended Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipName>Customer_Transaction_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <formula>Customer_Invoice__r.Finalized__c</formula>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freight_Allowance__c</fullName>
        <label>Freight Allowance</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fulfillment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment</label>
        <referenceTo>Fulfillment__c</referenceTo>
        <relationshipLabel>Customer Invoice Lines</relationshipLabel>
        <relationshipName>Customer_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gross_Price__c</fullName>
        <label>DEPRECATED</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <description>If selected, there is a problem with the customer invoice line. Exceptions must be resolved before you can process the order.</description>
        <formula>Exceptions_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <formula>Customer_Invoice__r.Historical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <inlineHelpText>This represents the sequence of lines for each Customer Invoice.</inlineHelpText>
        <label>Line</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Location.</description>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>Customer_Transaction_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_Hyperlink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Hyperlink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occurrence__c</fullName>
        <label>Occurrence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Off_Invoice_Paid__c</fullName>
        <label>Off Invoice Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_Invoice_Rate__c</fullName>
        <description>For Trade Promotion Off Invoice Rate</description>
        <label>Off Invoice Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_UOM_Every__c</fullName>
        <formula>Pricing_UOM__r.Every__c</formula>
        <label>Pricing UOM Every</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_UOM_Recurrence__c</fullName>
        <formula>TEXT(Pricing_UOM__r.Recurrence__c)</formula>
        <label>Pricing UOM Recurrence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing UOM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UOM__c.Type__c</field>
                <operation>equals</operation>
                <value>Time</value>
            </filterItems>
            <infoMessage>Pricing UOM must be time based</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Customer Invoice Lines (Pricing UOM)</relationshipLabel>
        <relationshipName>Customer_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Reference</label>
        <referenceTo>Cross_Reference__c</referenceTo>
        <relationshipLabel>Customer Invoice Lines</relationshipLabel>
        <relationshipName>Customer_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Customer_Transaction_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prorate_Factor__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Prorate Factor</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Shipped__c</fullName>
        <label>Quantity Fulfilled</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_from_Stock__c</fullName>
        <label>Quantity from Stock</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Basis__c</fullName>
        <label>Rate Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recurrence_Start_Date__c</fullName>
        <description>Set by the system to determine pro-rate factor</description>
        <label>Recurrence Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Sales Order Line.</description>
        <label>Sales Order Line</label>
        <referenceTo>Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Customer Invoice Lines</relationshipLabel>
        <relationshipName>Customer_Transaction_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Sales Order.</description>
        <inlineHelpText>If you want to ship an entire sales order in this shipment, you must enter a sales order; you can override this in each shipment line.</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Customer Invoice Lines</relationshipLabel>
        <relationshipName>Customer_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Rate__c</fullName>
        <label>Sales Tax Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selling_UOM__c</fullName>
        <formula>Product__r.Selling_UOM__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selling UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Shipment Line.</description>
        <label>Shipment Line</label>
        <referenceTo>Shipment_Line__c</referenceTo>
        <relationshipLabel>Customer Invoice Lines</relationshipLabel>
        <relationshipName>Customer_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Shipment.</description>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipName>Customer_Transaction_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Key__c</fullName>
        <externalId>true</externalId>
        <label>Source Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subtransaction_Type__c</fullName>
        <label>Subtransaction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Weight__c</fullName>
        <formula>Weight__c * Quantity_Shipped__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Weight</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Based__c</fullName>
        <formula>Product__r.Usage_Based__c</formula>
        <label>Usage-Based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAT_Rate__c</fullName>
        <label>VAT Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Value_Added_Tax__c</fullName>
        <description>The total value added tax for this sales order line.</description>
        <inlineHelpText>The total Value Added Tax (VAT) for this Sales Order Line.</inlineHelpText>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to UOM.</description>
        <label>Weight UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipName>Customer_Transaction_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Customer Invoice Line</label>
    <nameField>
        <label>Customer Invoice Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>